--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -23,18 +23,15 @@
   "YOUR_TARGET": "Яка твоя мета?",
   "STEP3_TITLE": "Ми адаптуємо плани під твій вибір.",
   "HOUSEHOLD": "Побут",
-  "STEP4_TITLE": "Налаштуй параметри для своєї сім'ї",
-  "FAMILY_MEMBERS": "Членів сім'ї",
-  "WEEKLY_BUDGET": "Тижневий бюджет",
-  "STEP4_SUBTITLE": "AI підбере рецепти, щоб вписатися в цю суму.",
-  "HAVE_INVITE_CODE": "Маєте код запрошення?",
-  "INVITE_CODE": "Код запрошення",
-  "INVITE_CODE_HINT": "Якщо у вас є код від сім'ї, ви автоматично приєднаєтеся до неї",
+  "ALMOST_DONE": "Майже готово",
+  "STEP4_TITLE": "Перевірте ваші дані перед завершенням",
+  "YOUR_PROFILE": "Ваш профіль",
   "TARGETS": {
-    "WEIGHT_LOSS": "Схуднення",
-    "WEIGHT_GAIN": "Набір ваги",
-    "MAINTAIN_HEALTH": "Підтримка здоров'я",
-    "SAVE_BUDGET": "Економія бюджету"
+    "LOSE_WEIGHT": "Схуднення",
+    "GAIN_WEIGHT": "Набір маси",
+    "MAINTAIN": "Підтримка",
+    "SAVE_BUDGET": "Економія бюджету",
+    "HEALTHY": "Здорове харчування"
   },
   "CURRENCY": {
     "UAH": "грн"
