Add age field to registration and update project configuration
- Added `age` as an optional field in the registration form along with UI and validation logic.
- Updated translations (`en.json`, `uk.json`) to include new labels.
- Replaced run commands in `package.json` for Android and iOS with `expo run:*`.
- Added camera permissions and updated package name in `app.json`.
- Included IntelliJ datasource configuration (`dataSources.xml`).

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -25,6 +25,8 @@
   "ALMOST_DONE": "Almost Done!",
   "STEP4_TITLE": "Review your information before completing",
   "YOUR_PROFILE": "Your Profile",
+  "YOUR_AGE": "Your age",
+  "OPTIONAL": "Optional",
   "TARGETS": {
     "LOSE_WEIGHT": "Weight Loss",
     "GAIN_WEIGHT": "Weight Gain",
