--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -26,6 +26,8 @@
   "ALMOST_DONE": "Майже готово",
   "STEP4_TITLE": "Перевірте ваші дані перед завершенням",
   "YOUR_PROFILE": "Ваш профіль",
+  "YOUR_AGE": "Ваш вік",
+  "OPTIONAL": "Необов'язково",
   "TARGETS": {
     "LOSE_WEIGHT": "Схуднення",
     "GAIN_WEIGHT": "Набір маси",
