Add reusable components and enhance login and onboarding flows
- Added new reusable components: `Modal`, `Checkbox`, and `MemberCard` with comprehensive props and styles.
- Refactored login flow to include input validation using utility functions (`validateEmail`, `validatePassword`).
- Improved error handling and translations in login and onboarding.
- Enhanced `step4` UI for managing family members with centralized `MemberCard` component.
- Updated `i18n` translations for new error messages and labels.
- Introduced `CardStyles` for standardized card styling across components.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -98,6 +98,12 @@
     "PASSWORD": "Password must be at least 6 characters long"
   },
   "ERRORS": {
-    "REGISTRATION_FAILED": "Registration failed. Please try again."
+    "REGISTRATION_FAILED": "Registration failed. Please try again.",
+    "LOGIN_FAILED": "Login failed",
+    "INVALID_CREDENTIALS": "Invalid email or password",
+    "EMAIL_EXISTS": "Email already exists",
+    "EMAIL_EXISTS_MESSAGE": "This email is already registered. Please use another one or sign in.",
+    "GENERIC": "Error",
+    "TRY_AGAIN": "Something went wrong. Please try again."
   }
 }
