Introduce `ToastProvider` for centralized toasts and enhance user feedback
- Added `ToastProvider` component for managing notifications with multiple types: success, error, warning, and info.
- Replaced `Alert` usage with `ToastProvider` in login, registration, and onboarding steps for a more consistent user experience.
- Updated `i18n` translations to include new toast messages for errors, successes, and warnings.
- Enhanced `MemberCard` with new `mealsCount` and `allergiesCount` props for better presentation.
- Refactored `step4` and `step5` components to utilize `ToastProvider` for improved feedback on actions like adding or deleting members and saving preferences.
- Standardized code style throughout affected files (e.g., import formatting).

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -27,11 +27,14 @@
   "EDIT_PREFERENCES": "Edit preferences",
   "MEALS_TITLE": "Daily Meals",
   "ALLERGIES_TITLE": "Food Allergies",
+  "MEAL": "meal",
+  "ALLERGY": "allergy",
   "MEALS": {
     "BREAKFAST": "Breakfast",
     "LUNCH": "Lunch",
     "DINNER": "Dinner",
-    "SNACK": "Snack"
+    "SNACK": "Snack",
+    "TITLE": "meals"
   },
   "BUDGET_AND_REVIEW": "Budget & Review",
   "STEP5_SUBTITLE": "Finalize your setup",
@@ -104,6 +107,13 @@
     "EMAIL_EXISTS": "Email already exists",
     "EMAIL_EXISTS_MESSAGE": "This email is already registered. Please use another one or sign in.",
     "GENERIC": "Error",
-    "TRY_AGAIN": "Something went wrong. Please try again."
+    "TRY_AGAIN": "Something went wrong. Please try again.",
+    "FAILED_TO_LOAD_ALLERGIES": "Failed to load allergies",
+    "NAME_REQUIRED": "Please enter a name"
+  },
+  "SUCCESS": {
+    "MEMBER_ADDED": "Family member added successfully",
+    "MEMBER_REMOVED": "Family member removed",
+    "PREFERENCES_SAVED": "Preferences saved successfully"
   }
 }
