--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -93,7 +93,8 @@
     "FINISH": "Завершити",
     "ADD": "Додати",
     "CANCEL": "Скасувати",
-    "SAVE": "Зберегти"
+    "SAVE": "Зберегти",
+    "CLOSE": "Закрити"
   },
   "VALIDATORS": {
     "NAME": "Ім'я має бути довшим за 1 символ",
@@ -109,11 +110,17 @@
     "GENERIC": "Помилка",
     "TRY_AGAIN": "Щось пішло не так. Спробуйте ще раз.",
     "FAILED_TO_LOAD_ALLERGIES": "Не вдалося завантажити алергії",
-    "NAME_REQUIRED": "Введіть ім'я"
+    "NAME_REQUIRED": "Введіть ім'я",
+    "ACCEPT_TERMS": "Будь ласка, прийміть Умови використання та Політику конфіденційності"
   },
   "SUCCESS": {
     "MEMBER_ADDED": "Члена сім'ї успішно додано",
     "MEMBER_REMOVED": "Члена сім'ї видалено",
-    "PREFERENCES_SAVED": "Налаштування збережено"
-  }
+    "PREFERENCES_SAVED": "Налаштування збережено",
+    "REGISTRATION_COMPLETE": "Ласкаво просимо до Kitchen OS!"
+  },
+  "I_AGREE_TO": "Я погоджуюсь з",
+  "AND": "та",
+  "TERMS_OF_USE": "Умовами використання",
+  "PRIVACY_POLICY": "Політикою конфіденційності"
 }
