feat: add profile and family management screens with new navigation paths

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,32 +1,32 @@
 {
   "APP_NAME": "Kitchen OS",
-  "WELCOME_TITLE": "Your AI Kitchen Commander. Eat smart, save money.",
+  "WELCOME_TITLE": "Your AI Kitchen Commander. Eat smart, save more.",
   "GET_STARTED": "Get Started",
   "CONTINUE_WITH": "Or continue with",
   "HAVE_ACCOUNT": "Already have an account?",
   "SIGN_IN": "Sign In",
-  "WELCOME_BACK": "Welcome Back",
+  "WELCOME_BACK": "Welcome back",
   "SIGN_IN_TITLE": "Sign in to your account",
   "EMAIL": "Email",
   "PASSWORD": "Password",
   "FORGOT_PASSWORD": "Forgot password?",
   "DONT_HAVE_ACCOUNT": "Don't have an account?",
   "SIGN_UP": "Sign Up",
-  "LETS_MEET": "Let's get to know you",
+  "LETS_MEET": "Let's get to know each other",
   "STEP1_TITLE": "Create your Kitchen OS account",
   "YOUR_NAME": "Your Name",
-  "BODY_METRICS": "Body Metrics",
-  "STEP2_TITLE": "Help Kitchen OS customize for your needs",
+  "BODY_METRICS": "Body metrics",
+  "STEP2_TITLE": "Help us personalize Kitchen OS for you",
   "HEIGHT": "Height",
   "WEIGHT": "Weight",
   "ESTIMATED": "Estimated",
   "YOUR_TARGET": "What is your goal?",
-  "STEP3_TITLE": "We adapt plans based on your choice.",
+  "STEP3_TITLE": "We’ll adapt plans based on your choice",
   "FAMILY_AND_PREFERENCES": "Family & Preferences",
-  "STEP4_SUBTITLE": "Manage members, meals and allergies",
+  "STEP4_SUBTITLE": "Manage members, meals, and allergies",
   "EDIT_PREFERENCES": "Edit preferences",
-  "MEALS_TITLE": "Daily Meals",
-  "ALLERGIES_TITLE": "Food Allergies",
+  "MEALS_TITLE": "Meals",
+  "ALLERGIES_TITLE": "Food allergies",
   "MEAL": "meal",
   "ALLERGY": "allergy",
   "MEALS": {
@@ -38,22 +38,22 @@
   },
   "BUDGET_AND_REVIEW": "Budget & Review",
   "STEP5_SUBTITLE": "Finalize your setup",
-  "ALMOST_DONE": "Almost Done!",
+  "ALMOST_DONE": "Almost done!",
   "YOUR_PROFILE": "Your Profile",
   "YOUR_AGE": "Your age",
   "OPTIONAL": "Optional",
   "YOU": "You",
   "ALLERGIES": "Allergies",
   "ALLERGIES_FOR": "Allergies for",
-  "ADD_FAMILY_MEMBER": "Add Family Member",
-  "WEEKLY_BUDGET": "Weekly Budget",
-  "BUDGET_HINT": "We'll generate plans within this limit",
+  "ADD_FAMILY_MEMBER": "Add family member",
+  "WEEKLY_BUDGET": "Weekly budget",
+  "BUDGET_HINT": "We’ll build a menu within this limit",
   "SUMMARY": "Summary",
   "ACCOUNT": "Account",
   "GOAL": "Goal",
-  "FAMILY_SIZE": "Family Size",
+  "FAMILY_SIZE": "Family size",
   "PEOPLE": "people",
-  "TOTAL_ALLERGIES": "Total Allergies",
+  "TOTAL_ALLERGIES": "Total allergies",
   "SELECTED": "selected",
   "ADDED": "added",
   "ROLES": {
@@ -61,11 +61,11 @@
     "MEMBER": "Member"
   },
   "TARGETS": {
-    "LOSE_WEIGHT": "Weight Loss",
-    "GAIN_WEIGHT": "Weight Gain",
-    "MAINTAIN": "Maintain Weight",
-    "SAVE_BUDGET": "Save Budget",
-    "HEALTHY": "Healthy Eating"
+    "LOSE_WEIGHT": "Weight loss",
+    "GAIN_WEIGHT": "Weight gain",
+    "MAINTAIN": "Maintain weight",
+    "SAVE_BUDGET": "Save money",
+    "HEALTHY": "Healthy eating"
   },
   "CURRENCY": {
     "UAH": "UAH",
@@ -82,45 +82,67 @@
     "OVERWEIGHT": "Overweight"
   },
   "PLACEHOLDERS": {
-    "EMAIL": "Enter your email",
-    "PASSWORD": "Enter your password",
+    "EMAIL": "Enter email",
+    "PASSWORD": "Enter password",
     "NAME": "Enter name",
     "MIN_LEN": "Minimum 6 characters",
     "EMAIL_EXAMPLE": "example@mail.com"
   },
   "BUTTONS": {
     "CONTINUE": "Continue",
-    "FINISH": "Finish Setup",
+    "FINISH": "Finish",
     "ADD": "Add",
     "CANCEL": "Cancel",
     "SAVE": "Save",
-    "CLOSE": "Close"
+    "CLOSE": "Close",
+    "CHANGE_PASSWORD": "Change password"
   },
   "VALIDATORS": {
     "NAME": "Name must be longer than 1 character",
-    "EMAIL": "Please enter a valid email address",
-    "PASSWORD": "Password must be at least 6 characters long"
+    "EMAIL": "Enter a valid email address",
+    "PASSWORD": "Password must be at least 6 characters",
+    "PASSWORD_MISMATCH": "Passwords do not match"
   },
   "ERRORS": {
     "REGISTRATION_FAILED": "Registration failed. Please try again.",
     "LOGIN_FAILED": "Login failed",
     "INVALID_CREDENTIALS": "Invalid email or password",
     "EMAIL_EXISTS": "Email already exists",
-    "EMAIL_EXISTS_MESSAGE": "This email is already registered. Please use another one or sign in.",
+    "EMAIL_EXISTS_MESSAGE": "This email is already registered. Use another one or sign in.",
     "GENERIC": "Error",
     "TRY_AGAIN": "Something went wrong. Please try again.",
     "FAILED_TO_LOAD_ALLERGIES": "Failed to load allergies",
-    "NAME_REQUIRED": "Please enter a name",
-    "ACCEPT_TERMS": "Please accept the Terms of Use and the Privacy Policy."
+    "NAME_REQUIRED": "Name is required",
+    "ACCEPT_TERMS": "Please accept the Terms of Use and Privacy Policy",
+    "PROFILE_NOT_LOADED": "Failed to load profile"
   },
   "SUCCESS": {
-    "MEMBER_ADDED": "Family member added successfully",
+    "MEMBER_ADDED": "Family member successfully added",
     "MEMBER_REMOVED": "Family member removed",
-    "PREFERENCES_SAVED": "Preferences saved successfully",
-    "REGISTRATION_COMPLETE": "Welcome to Kitchen OS!"
+    "PREFERENCES_SAVED": "Preferences saved",
+    "REGISTRATION_COMPLETE": "Welcome to Kitchen OS!",
+    "PROFILE_UPDATED": "Profile updated",
+    "PASSWORD_CHANGED": "Password successfully changed"
   },
-  "I_AGREE_TO": "I agree to",
+  "I_AGREE_TO": "I agree to the",
   "AND": "and",
   "TERMS_OF_USE": "Terms of Use",
-  "PRIVACY_POLICY": "Privacy Policy"
+  "PRIVACY_POLICY": "Privacy Policy",
+  "ACCOUNT_SETTINGS": "Account settings",
+  "EDIT_PROFILE": "Edit profile",
+  "CHANGE_PASSWORD": "Change password",
+  "FAMILY_SETTINGS": "Family settings",
+  "FAMILY_MEMBERS": "Family members",
+  "MY_PREFERENCES": "My preferences",
+  "APP_SETTINGS": "App settings",
+  "LANGUAGE": "Language",
+  "NOTIFICATIONS": "Notifications",
+  "LOGOUT": "Log out",
+  "BASIC_INFO": "Basic information",
+  "CURRENT_PASSWORD": "Current password",
+  "NEW_PASSWORD": "New password",
+  "CONFIRM_NEW_PASSWORD": "Confirm new password",
+  "CHANGE_PASSWORD_DESCRIPTION": "Please enter your current password and a new password",
+  "CONFIRM_DELETE": "Confirm deletion",
+  "CONFIRM_DELETE_MEMBER": "Are you sure you want to remove {{name}} from the family?"
 }
