--- a/i18n/en.json
+++ b/i18n/en.json
@@ -56,6 +56,7 @@
   "TOTAL_ALLERGIES": "Total allergies",
   "SELECTED": "selected",
   "ADDED": "added",
+  "MY_PROFILE": "Profile",
   "ROLES": {
     "OWNER": "Owner",
     "MEMBER": "Member"
