--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -56,6 +56,7 @@
   "TOTAL_ALLERGIES": "Всього алергій",
   "SELECTED": "обрано",
   "ADDED": "додано",
+  "MY_PROFILE": "Профіль",
   "ROLES": {
     "OWNER": "Власник",
     "MEMBER": "Учасник"
