feat: remove profile preferences option and add theme translations

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -29,6 +29,7 @@
   "ALLERGIES_TITLE": "Food allergies",
   "MEAL": "meal",
   "ALLERGY": "allergy",
+  "THEME": "Theme",
   "MEALS": {
     "BREAKFAST": "Breakfast",
     "LUNCH": "Lunch",
