--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -29,6 +29,7 @@
   "ALLERGIES_TITLE": "Харчові алергії",
   "MEAL": "прийом",
   "ALLERGY": "алергія",
+  "THEME": "Тема",
   "MEALS": {
     "BREAKFAST": "Сніданок",
     "LUNCH": "Обід",
