--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -97,7 +97,8 @@
     "CANCEL": "Скасувати",
     "SAVE": "Зберегти",
     "CLOSE": "Закрити",
-    "CHANGE_PASSWORD": "Змінити пароль"
+    "CHANGE_PASSWORD": "Змінити пароль",
+    "DELETE": "Видалити"
   },
   "VALIDATORS": {
     "NAME": "Ім'я має бути довшим за 1 символ",
@@ -116,7 +117,8 @@
     "FAILED_TO_LOAD_ALLERGIES": "Не вдалося завантажити алергії",
     "NAME_REQUIRED": "Введіть ім'я",
     "ACCEPT_TERMS": "Будь ласка, прийміть Умови використання та Політику конфіденційності",
-    "PROFILE_NOT_LOADED": "Не вдалося завантажити профіль"
+    "PROFILE_NOT_LOADED": "Не вдалося завантажити профіль",
+    "INVALID_BUDGET": "Будь ласка, введіть коректну суму бюджету"
   },
   "SUCCESS": {
     "MEMBER_ADDED": "Члена сім'ї успішно додано",
@@ -124,13 +126,14 @@
     "PREFERENCES_SAVED": "Налаштування збережено",
     "REGISTRATION_COMPLETE": "Ласкаво просимо до Kitchen OS!",
     "PROFILE_UPDATED": "Профіль оновлено",
-    "PASSWORD_CHANGED": "Пароль успішно змінено"
+    "PASSWORD_CHANGED": "Пароль успішно змінено",
+    "BUDGET_UPDATED": "Бюджет успішно оновлено",
+    "LANGUAGE_CHANGED": "Мову успішно змінено"
   },
   "I_AGREE_TO": "Я погоджуюсь з",
   "AND": "та",
   "TERMS_OF_USE": "Умовами використання",
   "PRIVACY_POLICY": "Політикою конфіденційності",
-
   "ACCOUNT_SETTINGS": "Налаштування акаунту",
   "EDIT_PROFILE": "Редагувати профіль",
   "CHANGE_PASSWORD": "Змінити пароль",
@@ -148,5 +151,9 @@
   "CHANGE_PASSWORD_DESCRIPTION": "Будь ласка, введіть ваш поточний пароль та новий пароль",
   "CONFIRM_DELETE": "Підтвердження видалення",
   "CONFIRM_DELETE_MEMBER": "Ви впевнені, що хочете видалити {{name}} з сім'ї?",
-
+  "BUDGET_DESCRIPTION": "Встановіть свій тижневий бюджет на харчування. Ми допоможемо створити смачні плани харчування, що відповідають вашому бюджету.",
+  "CURRENT_BUDGET": "Поточний тижневий бюджет",
+  "NEW_BUDGET": "Новий бюджет",
+  "LANGUAGE_DESCRIPTION": "Оберіть бажану мову інтерфейсу додатку",
+  "LANGUAGE_INFO": "Зміни набудуть чинності негайно. Всі меню, налаштування та контент будуть відображатися обраною мовою."
 }
