--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -155,5 +155,16 @@
   "CURRENT_BUDGET": "Поточний тижневий бюджет",
   "NEW_BUDGET": "Новий бюджет",
   "LANGUAGE_DESCRIPTION": "Оберіть бажану мову інтерфейсу додатку",
-  "LANGUAGE_INFO": "Зміни набудуть чинності негайно. Всі меню, налаштування та контент будуть відображатися обраною мовою."
+  "LANGUAGE_INFO": "Зміни набудуть чинності негайно. Всі меню, налаштування та контент будуть відображатися обраною мовою.",
+  "FORGOT_PASSWORD_DESCRIPTION": "Введіть вашу електронну адресу і ми надішлемо вам код підтвердження для скидання пароля.",
+  "FORGOT_PASSWORD_INFO": "Перевірте свою поштову скриньку на наявність коду підтвердження. Це може зайняти кілька хвилин.",
+  "RESET_PASSWORD": "Скинути пароль",
+  "RESET_PASSWORD_DESCRIPTION": "Введіть 6-значний код, надісланий на {{email}}",
+  "VERIFICATION_CODE": "Код підтвердження",
+  "CODE_EXPIRES_INFO": "Код підтвердження дійсний протягом 15 хвилин.",
+  "VALIDATORS.CODE": "Код повинен містити рівно 6 цифр",
+  "BUTTONS.SEND_CODE": "Надіслати код",
+  "BUTTONS.RESET_PASSWORD": "Скинути пароль",
+  "SUCCESS.CODE_SENT": "Код підтвердження надіслано на вашу пошту",
+  "SUCCESS.PASSWORD_RESET": "Пароль успішно скинуто"
 }
